WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121839
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=121839
Summary
[WinCairo] Compile error.
peavo
Reported
2013-09-24 06:34:17 PDT
Today's WinCairo build fails with the errors:
>..\platform\graphics\GraphicsContext3DPrivate.cpp(78): error C3861: 'client': identifier not found 1 >..\platform\graphics\GraphicsContext3DPrivate.cpp(79): error C2227: left of '->platformLayerWillBeDestroyed' must point to class/struct/union/generic type type is ''unknown-type'' 1
Attachments
Patch
(1.25 KB, patch)
2013-09-24 06:40 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-09-24 06:40:19 PDT
Created
attachment 212462
[details]
Patch
Brent Fulgham
Comment 2
2013-09-24 09:21:43 PDT
Comment on
attachment 212462
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-09-24 09:44:30 PDT
Comment on
attachment 212462
[details]
Patch Clearing flags on attachment: 212462 Committed
r156336
: <
http://trac.webkit.org/changeset/156336
>
WebKit Commit Bot
Comment 4
2013-09-24 09:44:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug