[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=121839

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-09-24
Reviewed by Brent Fulgham.

* platform/graphics/GraphicsContext3DPrivate.cpp:
(WebCore::GraphicsContext3DPrivate::~GraphicsContext3DPrivate): Added missing guard.

Canonical link: https://commits.webkit.org/139843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156336 268f45cc-cd09-0410-ab3c-d52691b4dbfc